src/objects/Apttus_Config2__GuidedSearchRule__c.object
<CustomObject>
    <description>Represents a rule to search for products based on a guided interview</description>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the rule is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BusinessObject__c</fullName>
        <description>The business object which provides the context for the rule</description>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product2</fullName>
                    <default>true</default>
                    <label>Product2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the category the guided selling is occurring on.</description>
        <label>Category</label>
        <referenceTo>Apttus_Config2__ClassificationName__c</referenceTo>
        <relationshipLabel>Guided Selling Rules</relationshipLabel>
        <relationshipName>GuidedSellingRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ClassificationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category Hierarchy</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Guided Selling Rules</relationshipLabel>
        <relationshipName>GuidedSellingRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The description for the rule</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <description>The rule effective date. The rule becomes effective on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <description>The rule expiration date. The rule becomes ineffective after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GuidedQuestion1Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the first guided question.</description>
        <label>Guided Question 1</label>
        <referenceTo>Apttus_Config2__GuidedQuestion__c</referenceTo>
        <relationshipName>GuidedSearchRules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GuidedQuestion2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the second guided question.</description>
        <label>Guided Question 2</label>
        <referenceTo>Apttus_Config2__GuidedQuestion__c</referenceTo>
        <relationshipName>GuidedSearchRules2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GuidedQuestion3Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the third guided question.</description>
        <label>Guided Question 3</label>
        <referenceTo>Apttus_Config2__GuidedQuestion__c</referenceTo>
        <relationshipName>GuidedSearchRules3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InterviewName__c</fullName>
        <description>The name of the guided interview</description>
        <label>Interview Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RuleType__c</fullName>
        <description>The rule type</description>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Filter Set</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The rule evaluation sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StopProcessingMoreRules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to prevent subsequent rules from processing</description>
        <label>Stop Processing More Rules</label>
        <type>Checkbox</type>
    </fields>
    <label>Guided Selling Rule</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__Sequence__c</columns>
        <columns>Apttus_Config2__InterviewName__c</columns>
        <columns>Apttus_Config2__BusinessObject__c</columns>
        <columns>Apttus_Config2__Description__c</columns>
        <columns>Apttus_Config2__Active__c</columns>
        <columns>Apttus_Config2__StopProcessingMoreRules__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guided Selling Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>